// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`landing page links renders correctly\`\${prov}\` 1`] = `
<li>
  <a
    href="https://github.com/ethereum/go-ethereum/releases"
    rel="noopener noreferrer"
    target="_blank"
  >
    Geth
  </a>
</li>
`;

exports[`landing page links renders correctly\`\${prov}\` 2`] = `
<li>
  <a
    href="https://github.com/paritytech/parity-ethereum/releases"
    rel="noopener noreferrer"
    target="_blank"
  >
    Parity
  </a>
</li>
`;

exports[`landing page links renders correctly\`\${prov}\` 3`] = `
<li>
  <a
    href="https://metamask.io/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Metamask
  </a>
</li>
`;

exports[`landing page links renders correctly\`\${prov}\` 4`] = `
<li>
  <a
    href="https://infura.io/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Infura
  </a>
</li>
`;

exports[`landing page links renders correctly\`\${prov}\` 5`] = `
<li>
  <a
    href="https://truffleframework.com/docs/ganache/quickstart"
    rel="noopener noreferrer"
    target="_blank"
  >
    Ganache
  </a>
</li>
`;
